@@ -8,6 +8,7 @@
   * Added normalization by the transform length to the lsl.reader._gofast module
   * Added back in the "import lsl; lsl.test()" fixture
   * Updated the plotUVcoverage.py script to work with all 260 stands
+  * Fixed the data volume computation for lsl.common.sdf.Stepped observations
 
 0.6.2
   * Fixed a bug in splitDRX.py that caused the script to die if an --offset was passed in
